# investmentology

./: .dockerignore  .env.example  .gitignore  .mcp.json  =0.23.0  CLAUDE.md  Dockerfile  Dockerfile.pwa  GEMINI.md  README.md  pyproject.toml  requirements.txt  run_api.py  serve.py
.audit/: backend-report.md  frontend-report.md  gap-analysis.md  stakeholder-panel.md
.claude/: settings.json
.gemini/: settings.json
audit/: code-architecture-audit.md  finance-methodology-audit.md  production-roadmap.md  pwa-production-audit.md
deploy/: install-timers.sh  investmentology-daily-analyze.service  investmentology-daily-analyze.timer  investmentology-monitor.service  investmentology-monitor.timer  investmentology-post-screen.service  investmentology-post-screen.timer  investmentology-premarket.service  investmentology-premarket.timer  investmentology-screen.service  investmentology-screen.timer
docs/: cognitive-sovereign-fund-raci.md  platform-audit-2026-02-26.md
k8s/: adguard-rewrite.json  argocd-app.yaml  caddy.conf  nginx.conf
pwa/: index.html  package-lock.json  package.json  vite.config.ts
research/: accuracy-reality-check.md  backtest-design.md  broker-firms.md  data-gathering.md  deep-review-agent-profiles.md  deep-review-ecosystem.md  deep-review-orchestration.md  deep-review-quant-gate.md  deep-review-synthesis-math.md  deep-review-synthesis.md  deep-review-theory-validation.md  fintech-communication.md  index-methodologies.md  methodology-mapping.md  phase2-definitive-plan.md  phase2-qualified-plan.md  phase2-synthesis.md  phase3-application-plan.md  plan-validation-challenge.md  plan-validation-practitioner.md  plan-validation-technical.md  quant-academic.md
scripts/: collaborate.py  deploy-test.sh  hb-agent-proxy.py  screen-setup.sh  (+1 more)
(+400 files in other folders)
