[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "investmentology"
version = "0.1.0"
description = "AI-powered institutional-grade investment advisory platform"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.31",
    "alpaca-py>=0.21.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
