[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investmentology"
version = "0.1.0"
description = "AI-powered institutional-grade investment advisory platform"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.31",
    "alpaca-py>=0.21.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "psycopg-pool>=3.1.0",
    "finnhub-python>=2.4.0",
    "fredapi>=0.5.0",
    "edgartools>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
investmentology = "investmentology.cli:main"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
